# rknn_yolov5

./: .gitignore  CMakeLists.txt  README.md  build-linux_RK3588.sh  detector.h  main.cpp  rknn_demo  run.sh  yolov5.h
RKNNYoloV5/: CMakeLists.txt  README.md
RKNNYoloV5/include/: yolov5_detector.h  yolov5_utils.h
RKNNYoloV5/src/: yolov5_detector.cpp  yolov5_utils.cpp
include/: rknn_inference_engine.h  yolov5_detector.h
install/: rknn_demo  run.sh
model/: labels_list.txt
rkdetect/: CMakeLists.txt
rkdetect/include/: common.h  detector.h  rkdetect.h
rkdetect/src/: detector.cpp  rkdetect.cpp
src/: main.cpp  rknn_inference_engine.cpp  yolov5_detector.cpp
utils/: CMakeLists.txt  image_utils.c
